# vanguard-music-player

./: .gitignore  README.md  index.html  package-lock.json  package.json
docs/: index.html
public/: donate.html
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
