[package]
name = "vanguard-player"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "vanguard_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.6.0"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
lazy_static    = "1.4"
tokio          = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
